# gastronomy-compiler

./: .gitignore  README.md  pyproject.toml
benchmarks/: README.md  __init__.py  contenders.py  datasets.py  extractor_eval.py  metrics.py  run_flavor_pairing.py  run_recipes.py
benchmarks/sample_data/: flavor_pairs_sample.csv  recipes_sample.csv
docs/: architecture.md  extraction.md  fm_dag.md  projections.md
examples/: caesar_salad.txt  duck_confit.txt  miso_ramen.txt
paper/: paper.bib  paper.md
src/gastronomyml_compiler/: __init__.py  cli.py  tiers.py
src/gastronomyml_compiler/annotation/: __init__.py  base.py  mock_extractor.py  nlp_extractor.py  rule_extractor.py
src/gastronomyml_compiler/audit/: __init__.py  hash_chain.py
src/gastronomyml_compiler/canonicalizer/: __init__.py  registry.py
src/gastronomyml_compiler/export/: __init__.py  json_export.py  schema_org.py
src/gastronomyml_compiler/fm_dag/: __init__.py  base.py  dag.py
src/gastronomyml_compiler/ingestion/: __init__.py  text_loader.py
src/gastronomyml_compiler/ir/: __init__.py  schemas.py
src/gastronomyml_compiler/pipeline/: __init__.py  orchestrator.py
src/gastronomyml_compiler/projections/: __init__.py  base.py  cultural_harmony.py  flavor_contrast.py  flavor_similarity.py  nutritional_balance.py
src/gastronomyml_compiler/segmentation/: __init__.py  segmenter.py
tests/: test_cli.py  test_export.py  test_extractor_bakeoff.py  test_graph.py  test_ir.py  test_nlp_tier.py  test_orchestrator.py  test_projection_values.py  test_projections.py  test_recall.py  test_regressions.py
(+15 files in other folders)
